--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@reduxjs/toolkit": "^2.5.0",
     "@svgr/webpack": "^8.1.0",
     "@tanstack/react-table": "^8.10.7",
     "@types/node": "20.5.7",
@@ -41,12 +42,14 @@
     "@types/react-dom": "18.2.7",
     "@uploadthing/react": "^5.7.0",
     "autoprefixer": "10.4.15",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^2.30.0",
     "eslint": "8.48.0",
     "eslint-config-next": "^14.0.1",
+    "firebase": "^11.1.0",
     "framer-motion": "^11.9.0",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.291.0",
@@ -59,6 +62,7 @@
     "react-day-picker": "^8.9.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
+    "react-redux": "^9.2.0",
     "recharts": "^2.12.7",
     "sharp": "^0.32.5",
     "tailwind-merge": "^1.14.0",
